fix pen icon vert alignment (override global box-sizing) #sadface

--- a/src/planbox_ui/static/styles/main.scss
+++ b/src/planbox_ui/static/styles/main.scss
@@ -973,6 +973,10 @@ span.sub-heading-postfix {
     }
   }
 }
+.pen-menu,
+.pen-menu * {
+  box-sizing: content-box !important;
+}
 
 .section-settings-toggle-container {
   margin-bottom: 0.75rem;
